force-app/main/default/objects/Systems__c/Systems__c.object-meta.xml
<CustomObject>
    <label>System</label>
    <nameField>
        <displayFormat>SYS-{0000000000}</displayFormat>
        <label>Systems Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Systems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>