force-app/main/default/objects/Systems__c/fields/BuildingProjectSystem__c.field-meta.xml
<CustomField>
    <fullName>BuildingProjectSystem__c</fullName>
    <label>Building Project</label>
    <referenceTo>BuildingProject__c</referenceTo>
    <relationshipLabel>Systems</relationshipLabel>
    <relationshipName>Systems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>