force-app/main/default/objects/Systems__c/fields/SystemSize__c.field-meta.xml
<CustomField>
    <fullName>SystemSize__c</fullName>
    <label>System Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>