force-app/main/default/objects/Systems__c/fields/SystemType__c.field-meta.xml
<CustomField>
    <fullName>SystemType__c</fullName>
    <label>System Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aluminiumfassade</fullName>
                <label>Aluminum facade</label>
            </value>
            <value>
                <fullName>Holzfassade</fullName>
                <label>Wooden facade</label>
            </value>
            <value>
                <fullName>Stahlfassade</fullName>
                <label>Steel facade</label>
            </value>
            <value>
                <fullName>Aluminiumdach</fullName>
                <label>Aluminum roof</label>
            </value>
            <value>
                <fullName>Holzdach</fullName>
                <label>Wooden roof</label>
            </value>
            <value>
                <fullName>Stahldach</fullName>
                <label>Steel roof</label>
            </value>
            <value>
                <fullName>Aluminium Lochfenster/-Fensterbänder</fullName>
                <label>Aluminum punched window / window frames</label>
            </value>
            <value>
                <fullName>Einsatzfenster</fullName>
                <label>Operational window</label>
            </value>
            <value>
                <fullName>elementierte Lösung THERM+</fullName>
                <label>Modular Solution THERM+</label>
            </value>
            <value>
                <fullName>elementierte Lösung FRAME+</fullName>
                <label>Modular Solution FRAME+</label>
            </value>
            <value>
                <fullName>Hebe Schiebe Türe</fullName>
                <label>Lift-and-slide door</label>
            </value>
            <value>
                <fullName>Holz-Aluminium Fenster</fullName>
                <label>Wood-Aluminum Windows</label>
            </value>
            <value>
                <fullName>Aluminiumtüre</fullName>
                <label>Aluminum door</label>
            </value>
            <value>
                <fullName>Brandschutztüre</fullName>
                <label>Fire protection door</label>
            </value>
            <value>
                <fullName>Dachfenster</fullName>
                <label>Roof window</label>
            </value>
            <value>
                <fullName>Aluminium-Dach</fullName>
                <isActive>false</isActive>
                <label>Aluminium-Dach</label>
            </value>
            <value>
                <fullName>Aluminium-Fassade</fullName>
                <isActive>false</isActive>
                <label>Aluminium-Fassade</label>
            </value>
            <value>
                <fullName>Aluminium-Fenster</fullName>
                <isActive>false</isActive>
                <label>Aluminium-Fenster</label>
            </value>
            <value>
                <fullName>Holz-Dach</fullName>
                <isActive>false</isActive>
                <label>Holz-Dach</label>
            </value>
            <value>
                <fullName>Holz-Fassade</fullName>
                <isActive>false</isActive>
                <label>Holz-Fassade</label>
            </value>
            <value>
                <fullName>Stahl-Dach</fullName>
                <isActive>false</isActive>
                <label>Stahl-Dach</label>
            </value>
            <value>
                <fullName>Stahl-Fassade</fullName>
                <isActive>false</isActive>
                <label>Stahl-Fassade</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>