force-app/main/default/objects/Systems__c/fields/SystemUnit__c.field-meta.xml
<CustomField>
    <fullName>SystemUnit__c</fullName>
    <label>System Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sqm</fullName>
                <default>true</default>
                <label>m²</label>
            </value>
            <value>
                <fullName>quantity</fullName>
            </value>
            <value>
                <fullName>linear meters</fullName>
            </value>
            <value>
                <fullName>kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>